# licensegate-rs

./: Cargo.toml  LICENSE  Readme.md
examples/: sample.rs
src/: lib.rs  licensegate_config.rs
