[package]
name = "licensegate-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Unofficial Rust SDK for integrating with the Licensegate licensing service"
homepage = "https://github.com/rohitsangwan01/licensegate-rs"
repository = "https://github.com/rohitsangwan01/licensegate-rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1.0"
urlencoding = "2.1"
chrono = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "2.0.12"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
